Closed Bug 416326 Opened 18 years ago Closed 17 years ago

WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x804B000A in nsUrlClassifierDBService.cpp, line 3242

Categories

(Toolkit :: Safe Browsing, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Firefox 3 beta4

People

(Reporter: reed, Assigned: dcamp)

Details

Attachments

(1 file)

I'm getting this continuously in my debug build. WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x804B000A: file /home/reed/mozilla/builds/mozilla/toolkit/components/url-classifier/src/nsUrlClassifierDBService.cpp, line 3242 3237 nsCAutoString key; 3238 // Canonicalize the url 3239 nsCOMPtr<nsIUrlClassifierUtils> utilsService = 3240 do_GetService(NS_URLCLASSIFIERUTILS_CONTRACTID); 3241 nsresult rv = utilsService->GetKeyForURI(uri, key); 3242 NS_ENSURE_SUCCESS(rv, rv);
Flags: blocking-firefox3?
Flags: blocking-firefox3? → blocking-firefox3+
Attached patch fixSplinter Review
This is actually a pretty harmless failure. It just means that the docshell requested classification of a URI with no hostname. Attached patch switches this from an NS_ENSURE_SUCCESS() to an if (NS_FAILED()) to avoid the misleading console spew. The patch also fixes an error propagation bug in this function's caller.
Assignee: nobody → dcamp
Status: NEW → ASSIGNED
Attachment #302222 - Flags: review?(tony)
Attachment #302222 - Attachment is patch: true
Attachment #302222 - Attachment mime type: application/octet-stream → text/plain
It may be pretty harmless, but it made my debugging session completely useless, as it filled my console with this warning. :)
Attachment #302222 - Flags: review?(tony) → review+
Keywords: checkin-needed
Checking in toolkit/components/url-classifier/src/nsUrlClassifierDBService.cpp; /cvsroot/mozilla/toolkit/components/url-classifier/src/nsUrlClassifierDBService.cpp,v <-- nsUrlClassifierDBService.cpp new revision: 1.60; previous revision: 1.59 done
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Firefox 3 beta4
Product: Firefox → Toolkit
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: