Bug 416326 - "WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x804B000A in nsUrlClassifierDBService.cpp, line 3242" [p=dcamp@mozilla.com (Dave Camp) r=tony a=blocking-firefox3+]